--- a/torneo/templates/torneo/pdf_template.html
+++ b/torneo/templates/torneo/pdf_template.html
@@ -62,7 +62,7 @@ th {
 
     }
     @page {
-size: A5 landscape;
+size: A4 landscape;
 }
 
 
@@ -72,7 +72,9 @@ size: A5 landscape;
 <h1>Plan Libelula Desarollo Integral</h1>
 <br>
 <h2>Informacion de la jornada {{ jornada.jornada }} del torneo {{ torneo.nombre }}</h2>
-<h8>Accede al sitio: {{ request }} </h8>
+<h8>Accede al sitio: URL>--> </h8><br><br>
+<h8>ID_Torneo: {{ torneo.id }} </h8>
+
 <br><br>
 <table>
  <tr>
