--- a/torneo/templates/torneo/torneo_list.html
+++ b/torneo/templates/torneo/torneo_list.html
@@ -15,7 +15,7 @@
       <div class="secondary-content">
         {% if Torneo.activo %}
         <a href="#modal_torneo" class="boton-eliminar modal-trigger" data-id="{{Torneo.id}}" data-nombre="{{Torneo.nombre}}">
-          <i class="medium material-icons icon-red">delete</i>
+          <i class="medium material-icons icon-orange">delete</i>
         </a>
         <a class="modal-trigger boton-cerrar" href="#modal_torneo" data-id="{{Torneo.id}}" data-nombre="{{Torneo.nombre}}">
            <i class="medium material-icons icon-green">done_all</i>
@@ -24,6 +24,13 @@
            <i class="medium material-icons icon-blue">mode_edit</i>
          </a>
          {% else %}
+             {% if not Torneo.ganador %}
+             <a href="{% url 'torneo:ganador' Torneo.id %}">
+                <i class="medium material-icons icon-yellow">grade</i>
+              </a>
+             {% else %}
+                <i class="medium material-icons icon-black">grade</i>
+             {% endif %}
          <a href="{% url 'torneo:editar_registro' Torneo.id %}">
             <i class="medium material-icons icon-blue">date_range</i>
           </a>
