--- a/static/css/landing/convocatorias.css
+++ b/static/css/landing/convocatorias.css
@@ -1,5 +1,49 @@
 .card {
   width: 300px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: all 0.2s ease-in;
+}
+
+.date {
+  margin-bottom: 40px;
+  margin-top: 4px;
+}
+
+.card-reveal {
+  background-color: #f7f8fb !important;
+}
+
+.primary-button:hover{
+  color: #fff;
+  background-position: -100% 0;
+  -webkit-transition: background-position 300ms, color 300ms ease, border-color 300ms ease;
+  -moz-transition: background-position 300ms, color 300ms ease, border-color 300ms ease;
+  -ms-transition: background-position 300ms, color 300ms ease, border-color 300ms ease;
+  -o-transition: background-position 300ms, color 300ms ease, border-color 300ms ease;
+  transition: background-position 300ms, color 300ms ease, border-color 300ms ease;
+}
+
+.primary-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.big {
+  height: 400px !important;
+  width: 400px !important;
+  transition: all 0.2s ease-in;
+}
+
+.cta-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 12px;
 }
 
 i {
@@ -18,6 +62,11 @@ i {
 .header > .image-header {
   background-image: url("../../static_media/Torneos.jpg");
   background-position: center;
+}
+
+.collection-item > a, .collection-item {
+  display: flex;
+  align-items: center;
 }
 
 @media (min-width: 360px) and (max-width: 767px) {
