--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         {% block styles %}
         {% endblock %}
         <!--Let browser know website is optimized for mobile-->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     {% block navbar %}
     {% if request.resolver_match.app_name == 'landing' %}
