Corregir logo en mobil

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,7 +18,7 @@
     <i class="material-icons medium">menu</i></a>
   <ul id="mobile-demo" class="sidenav">
     <div class="logo-container">
-      <li><a href="/"><img class="logo" src="{% static 'static_media/logo-white.svg' %}" alt="logo-plidi" /></a></li>
+      <li><a href="/"><img class="logo-mobile" src="{% static 'static_media/logo.svg' %}" alt="logo-plidi" /></a></li>
     </div>
         <li><a class="anchor" href="{% url 'landing:verTorneos' %}">CONVOCATORIAS</a></li>
         <li><a class="anchor" href="{% url 'landing:ver_torneos' %}">TORNEOS</a></li>
