--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -38,6 +38,10 @@ body {
   color: #fff;
 }
 
+.logo-mobile {
+  width: 64px;
+}
+
 .mobile-nav .logo-container {
   width: 100%;
   padding: 2em 0 1em 0;
