--- a/landing/templates/landing/detalle_torneo.html
+++ b/landing/templates/landing/detalle_torneo.html
@@ -52,8 +52,16 @@
           <tbody>
             {% for stat in stats %}
               <tr>
-                <td>{{ forloop.counter }}</td>
-                <td><img src="{{ stat.equipo.logo.url }}" alt="" class="circle" height="32" width="32" style="vertical-align:middle"><a href="{% url 'landing:detalle_equipo' stat.equipo.id %}">{{stat.equipo.nombre}}</a></td>
+                <td>
+                  
+                  {{ forloop.counter }}
+                </td>
+                <td>
+                  <img src="{{ stat.equipo.logo.url }}" alt="" class="circle" height="32" width="32" style="vertical-align:middle"><a href="{% url 'landing:detalle_equipo' stat.equipo.id %}">{{stat.equipo.nombre}}</a>
+                  {% if stat.win %}
+                  <i class="small material-icons icon-yellow" style="vertical-align:middle">grade</i>
+                  {% endif %}
+                </td>
                 <td>{{ stat.pts }}</td>
                 <td>{{ stat.jj }}</td>
                 <td>{{ stat.jg }}</td>
