cambio cedulas, error distinto numero

--- a/jugadora/templates/jugadora/jugadora_detail.html
+++ b/jugadora/templates/jugadora/jugadora_detail.html
@@ -63,6 +63,14 @@
         <input disabled value="{{EquipoNombre}}" id="disabled" type="text" style="color: #b4c0c6; border-bottom: 2px solid;">
         <label for="disabled">Equipo</label>
       </div>
+        <div class="input-field col s12">
+                    <a href="{% url 'jugadora:ver_jugadoras' %}" class="cancel back">Regresar</a>
+
+      </div>
+
+
+
+
     </div>
   </div>
 </div>
