--- a/coaches/templates/coaches/pre_registro.html
+++ b/coaches/templates/coaches/pre_registro.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+                <link rel="shortcut icon" href="{% static 'favicon/favicon.ico' %}"/>
+
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <!--Import Google Icon Font-->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
