--- a/torneo/templates/torneo/pdf_template.html
+++ b/torneo/templates/torneo/pdf_template.html
@@ -72,7 +72,7 @@ size: A4 landscape;
 <h1>Plan Libelula Desarollo Integral</h1>
 <br>
 <h2>Informacion de la jornada {{ jornada.jornada }} del torneo {{ torneo.nombre }}</h2>
-<h8>Accede al sitio: URL>--> </h8><br><br>
+<h8>Accede al sitio: http://planlibelula.com/torneo/accesar_cedula/ </h8><br><br>
 <h8>ID_Torneo: {{ torneo.id }} </h8>
 
 <br><br>
