--- a/torneo/templates/torneo/pdf_template.html
+++ b/torneo/templates/torneo/pdf_template.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-{% load static %}
 
 
 <html lang="en">
@@ -8,36 +7,9 @@
     <meta charset="UTF-8">
      <meta charset="utf-8">
         <title>Plan Libélula Desarrollo Integral</title>
-        <!--Import Google Icon Font-->
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <!--Import materialize.css-->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.4/css/materialize.min.css">
-
-        <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
-
-      <meta charset="utf-8">
-        <title>Plan Libélula Desarrollo Integral</title>
-        <link rel="shortcut icon" href="{% static 'favicon/favicon.ico' %}"/>
-        <!--Import Google Icon Font-->
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <!--Import materialize.css-->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.4/css/materialize.min.css">
-        {% if request.resolver_match.app_name == 'landing' %}
-          <link rel="stylesheet" href="{% static '/css/landing.css' %}">
-        {% else %}
-          <link rel="stylesheet" href="{% static '/index.css' %}">
-        {% endif %}
-        {% block styles %}
-        {% endblock %}
-        <!--Let browser know website is optimized for mobile-->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
 </head>
 
-  <link rel="stylesheet" href="{% static 'css/landing/main.css' %}">
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 
 <style>
@@ -58,18 +30,20 @@ th {
 }
     table, h1,h2, th, tr, td, body{
         font-family: 'Roboto', sans-serif;
-        font-size: 10px;
 
     }
     @page {
 size: A4 landscape;
 }
 
+body{
+    font-size: 10px;
+}
+
 
 </style>
 <body>
-<img src="{% static 'static_media/logo.svg' %}" height="100%" width="50px"/><br>
-<h1>Plan Libelula Desarollo Integral</h1>
+<h1>Plan Libélula Desarollo Integral</h1>
 <br>
 <h2>Informacion de la jornada {{ jornada.jornada }} del torneo {{ torneo.nombre }}</h2>
 <h8>Accede al sitio: http://planlibelula.com/torneo/accesar_cedula/ </h8><br><br>
