--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -13,16 +13,22 @@
 }
 
 .login>.image-container {
-  background-image: url("../static_media/cancha.jpg");
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width:100%;
   max-width: 55%;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  position: relative;
+}
+
+.cover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(303deg, rgba(62, 69, 100, 0.47), #2c1d3b);
+  z-index: -1;
+  opacity: 0.7;
 }
 
 h2 {
@@ -30,6 +36,15 @@ h2 {
   font-weight: bold;
 }
 
+.image-container > .image {
+  background-image: url("../static_media/login.jpg");
+  position: absolute;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  z-index:-1;
+}
 
 .login>.image-container>.text {
   width: 75%;
