--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!--Import materialize.css-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.4/css/materialize.min.css">
+        <link rel="shortcut icon" href="{% static 'favicon/favicon.ico' %}"/>
         <link rel="stylesheet" href="{% static '/index.css' %}">
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
         <!--Let browser know website is optimized for mobile-->
@@ -36,6 +37,8 @@
           </div>
       </div>
       <div class = "image-container">
+        <div class="image"></div>
+          <div class="cover"></div>
           <div class ="text">
               <h3 class="white-text">Bienvenido a <strong>Plan Libélula Desarrollo Integral</strong></h3>
               <h5 class="white-text">Inicia sesión para acceder a tu cuenta</h5>
