Quitar olvidar contraseña

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -71,7 +71,7 @@ h2 {
 
 form>.cta-container{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
