--- a/landing/templates/landing/partido.html
+++ b/landing/templates/landing/partido.html
@@ -143,7 +143,7 @@
           {% endfor %}
         </div>
         <div class="field-row portero">
-          {% for jugadora in jugadoras_local %}
+          {% for jugadora in jugadoras_visitante %}
             {% if jugadora.Posicion == 4 %}
             <div class="shirt shirt-visitante">
               {{ jugadora.Numero }}
