--- a/static/css/landing/main.css
+++ b/static/css/landing/main.css
@@ -107,10 +107,8 @@
 }
 
 .match .team {
-  max-height: 5em;
-  height: 100%;
-  max-width: 5em;
-  width: 100%;
+  height: 5em;
+  width: 5em;
 }
 
 .match .team {
